@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-10-18T00:57:58Z",
-  "count_outdated" : 1912,
-  "uniques_outdated" : 136,
+  "timestamp" : "2022-10-30T08:10:34Z",
+  "count_outdated" : 1915,
+  "uniques_outdated" : 137,
   "count" : 1916,
   "uniques" : 138,
   "views" : [
-    {
-      "timestamp": "2022-10-16T00:00:00Z",
-      "count": 3,
-      "count_minmax": [ 3, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-17T00:00:00Z",
       "count": 1,
